--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- TODO: Set the document title to the name of your application -->
-    <title>CREAS Atendimentos</title>
-    <meta name="description" content="Dashboard CREAS Teresópolis" />
+    <title>CRAS Atendimentos</title>
+    <meta name="description" content="Dashboard CRAS Teresópolis" />
     <meta name="author" content="SMCT" />
 
     <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Dashboard CREAS Teresópolis" />
-    <meta property="og:description" content="Dashboard CREAS Teresópolis" />
+    <meta property="og:title" content="Dashboard CRAS Teresópolis" />
+    <meta property="og:description" content="Dashboard CRAS Teresópolis" />
     <meta property="og:type" content="website" />
     <meta
       property="og:image"
